[package]
name = "penny"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
readme = "README.md"
repository = "https://github.com/morr0ne/penny"
publish = false

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
lalrpop-util = { version = "0.22.0", features = ["lexer", "unicode"] }
cranelift = "0.113.1"
cranelift-module = "0.113.1"
cranelift-jit = "0.113.1"
cranelift-native = "0.113.1"

[build-dependencies]
lalrpop = "0.22.0"
