[package]
name = "penny"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
readme = "README.md"
repository = "https://github.com/morr0ne/penny"
publish = false

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
lalrpop-util = { version = "0.22.0", features = ["lexer", "unicode"] }
cranelift = "0.114"
cranelift-module = "0.114"
cranelift-jit = "0.114"
cranelift-native = "0.114"
unicode-width = "0.2.0"
oxc_ast = "0.38.0"
oxc_codegen = "0.38.0"
oxc_minifier = "0.38.0"
oxc_allocator = "0.38.0"

[build-dependencies]
lalrpop = "0.22.0"
