[package]
name = "penny"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
readme = "README.md"
repository = "https://github.com/penny-lang/penny"
publish = false

[profile.release]
lto = true
codegen-units = 1
strip = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
bin = ["dep:clap"]
js = ["dep:oxc"]
native = [
    "dep:cranelift",
    "dep:cranelift-module",
    "dep:cranelift-jit",
    "dep:cranelift-native",
]
wasm = ["dep:wasm-bindgen"]

[dependencies]
anyhow = "1.0.93"
lalrpop-util = { version = "0.22.0", features = ["lexer", "unicode"] }
unicode-width = "0.2.0"

# Bin
clap = { version = "4.5.21", features = ["derive"], optional = true }

# Cranelift stuff
cranelift = { version = "0.114", optional = true }
cranelift-module = { version = "0.114", optional = true }
cranelift-jit = { version = "0.114", optional = true }
cranelift-native = { version = "0.114", optional = true }

# Js depedencies
oxc = { version = "0.38.0", features = ["full"], optional = true }

# Wasm support
wasm-bindgen = { version = "0.2.97", optional = true }


[build-dependencies]
lalrpop = "0.22.0"
